# CLCXX

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: build_cmake.yml
include/clcxx/: clcxx.hpp  clcxx_config.hpp  memory.hpp  package.hpp  scope.hpp  type_conversion.hpp
lib/: libclcxx.so.0  libclcxx.so.0.1.0
src/: c_interface.cpp  class.cpp  clcxx.cpp  functions.cpp  test.cpp  test.lisp
test/: test.cpp
tests/: test.cpp
